--- a/MobiHymn2/MobiHymn2.Android/Properties/AndroidManifest.xml
+++ b/MobiHymn2/MobiHymn2.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.tjapps.mobihymn">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="0.8.3" package="com.tjapps.mobihymn" android:versionCode="3">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="33" />
-	<application android:label="MobiHymn2.Android" android:theme="@style/MainTheme" android:networkSecurityConfig="@xml/network_security_config" android:icon="@mipmap/ic_launcher" />
+	<application android:label="MobiHymn Beta" android:theme="@style/MainTheme" android:networkSecurityConfig="@xml/network_security_config" android:icon="@mipmap/ic_launcher" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 	<uses-permission android:name="android.permission.RECORD_AUDIO" />
