--- a/MobiHymn2/MobiHymn2.iOS/MobiHymn2.iOS.csproj
+++ b/MobiHymn2/MobiHymn2.iOS/MobiHymn2.iOS.csproj
@@ -60,7 +60,7 @@
     <WarningLevel>4</WarningLevel>
     <MtouchArch>ARM64</MtouchArch>
     <CodesignKey>iPhone Developer</CodesignKey>
-    <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
+    <!--<CodesignEntitlements>Entitlements.plist</CodesignEntitlements>-->
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
