--- a/MobiHymn2/MobiHymn2.iOS/Entitlements.plist
+++ b/MobiHymn2/MobiHymn2.iOS/Entitlements.plist
@@ -1,7 +1,10 @@
-﻿<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>com.apple.developer.media-device-discovery-extension</key>
+	<true/>
+	<key>aps-environment</key>
+	<string>Production</string>
 </dict>
 </plist>
-
