--- a/MobiHymn2/MobiHymn2.iOS/Info.plist
+++ b/MobiHymn2/MobiHymn2.iOS/Info.plist
@@ -23,7 +23,7 @@
 	<key>MinimumOSVersion</key>
 	<string>8.0</string>
 	<key>CFBundleDisplayName</key>
-	<string>MobiHymn</string>
+	<string>MobiHymn Beta</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.tjapps.mobihymn</string>
 	<key>CFBundleVersion</key>
@@ -50,5 +50,16 @@
 		<string>Fonts/ChelseaMarket-Regular.ttf</string>
 		<string>Fonts/StyleScript-Regular.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
+	<key>CFBundleShortVersionString</key>
+	<string>0.8.3</string>
+	<key>UIApplicationSceneManifest</key>
+	<dict>
+		<key>UIApplicationSupportsMultipleScenes</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
