--- a/MobiHymn2/MobiHymn2/MobiHymn2.csproj
+++ b/MobiHymn2/MobiHymn2/MobiHymn2.csproj
@@ -3,32 +3,33 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
+    <BuildWithMSBuildOnMono>true</BuildWithMSBuildOnMono>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2545" />  
-    <PackageReference Include="Xamarin.Essentials" Version="1.7.5" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2578" />  
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.6" />
     <PackageReference Include="Xamarin.Forms.RangeSlider" Version="1.0.2" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
-    <PackageReference Include="PCLStorage" Version="1.0.2" />
+    <PackageReference Include="PCLStorage" Version="1.0.2" NoWarn="NU1701"/>
     <PackageReference Include="Acr.UserDialogs" Version="7.2.0.564" />
-    <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.5" />
+    <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.6" />
     <PackageReference Include="Xam.Plugin.SimpleAppIntro" Version="1.0.35" />
     <PackageReference Include="Com.Airbnb.Xamarin.Forms.Lottie" Version="4.1.0" />
     <PackageReference Include="Xamanimation" Version="1.3.0" />
-    <PackageReference Include="Microsoft.AppCenter" Version="5.0.1" />
-    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="5.0.1" />
-    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="5.0.1" />
-    <PackageReference Include="Melanchall.DryWetMidi" Version="6.1.4" />
+    <PackageReference Include="Microsoft.AppCenter" Version="5.0.2" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="5.0.2" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="5.0.2" />
+    <PackageReference Include="Melanchall.DryWetMidi" Version="7.0.0" />
     <PackageReference Include="Xamarin.FFImageLoading" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
     <PackageReference Include="CardsView" Version="2.8.1" />
     <PackageReference Include="Plugin.AudioRecorder" Version="1.1.0" />
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.48" />
   </ItemGroup>
   <ItemGroup Condition=" '$(Configuration)' != 'GooglePlay' ">
-    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="5.0.1" />
+    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="5.0.2" />
   </ItemGroup>
   <ItemGroup Condition=" '$(Configuration)' == 'GooglePlay' ">
     <PackageReference Include="Microsoft.AppCenter.DistributePlay" Version="5.0.1" />
@@ -94,6 +95,11 @@
     <None Remove="Resources\GIF\bookmark-deleted.gif" />
     <None Remove="Resources\GIF\bookmark-saved.gif" />
     <None Remove="Resources\GIF\not-found.gif" />
+    <None Remove="Resources\Fonts\Frosty.ttf" />
+    <None Remove="Resources\Fonts\KGKissMeSlowly.ttf" />
+    <None Remove="Resources\Fonts\KGMelonheadz.ttf" />
+    <None Remove="Resources\Fonts\KGWhattheTeacherWants.ttf" />
+    <None Remove="Resources\Fonts\Cookie-Regular.ttf" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Fonts\faRegular.ttf" />
@@ -129,6 +135,11 @@
     <EmbeddedResource Include="Resources\GIF\bookmark-deleted.gif" />
     <EmbeddedResource Include="Resources\GIF\bookmark-saved.gif" />
     <EmbeddedResource Include="Resources\GIF\not-found.gif" />
+    <EmbeddedResource Include="Resources\Fonts\Frosty.ttf" />
+    <EmbeddedResource Include="Resources\Fonts\KGKissMeSlowly.ttf" />
+    <EmbeddedResource Include="Resources\Fonts\KGMelonheadz.ttf" />
+    <EmbeddedResource Include="Resources\Fonts\KGWhattheTeacherWants.ttf" />
+    <EmbeddedResource Include="Resources\Fonts\Cookie-Regular.ttf" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Utils\" />
