resync midi from dropbox
ability to sync midi files from dropbox, and include them in sync details

--- a/MobiHymn4/MobiHymn4.Android/MobiHymn4.Android.csproj
+++ b/MobiHymn4/MobiHymn4.Android/MobiHymn4.Android.csproj
@@ -102,6 +102,7 @@
     <Compile Include="SplashActivity.cs" />
     <Compile Include="AppCenterService.cs" />
     <Compile Include="FIrebaseHelper.cs" />
+    <Compile Include="AppVersionBuild.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
