--- a/MobiHymn4/MobiHymn4.iOS/MobiHymn4.iOS.csproj
+++ b/MobiHymn4/MobiHymn4.iOS/MobiHymn4.iOS.csproj
@@ -77,6 +77,7 @@
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FirebaseHelper.cs" />
+    <Compile Include="AppVersionBuild.cs" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
@@ -156,6 +157,9 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Firebase.iOS.Auth">
       <Version>8.10.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="managed-midi">
+      <Version>1.10.1</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
