Firebase Push Notificaiton

--- a/MobiHymn4/MobiHymn4.iOS/Info.plist
+++ b/MobiHymn4/MobiHymn4.iOS/Info.plist
@@ -55,5 +55,7 @@
 	<array>
 		<string>com.xamarin.Gallery.openDetail</string>
 	</array>
+	<key>FirebaseAppDelegateProxyEnabled</key>
+	<false/>
 </dict>
 </plist>
