--- a/MobiHymn4/MobiHymn4.Android/MobiHymn4.Android.csproj
+++ b/MobiHymn4/MobiHymn4.Android/MobiHymn4.Android.csproj
@@ -92,6 +92,9 @@
     <PackageReference Include="Xamarin.Firebase.Auth">
       <Version>122.0.0.1</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.FirebasePushNotification">
+      <Version>3.4.35</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
@@ -103,6 +106,7 @@
     <Compile Include="AppCenterService.cs" />
     <Compile Include="FIrebaseHelper.cs" />
     <Compile Include="AppVersionBuild.cs" />
+    <Compile Include="MainApplication.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -273,6 +277,26 @@
       <Generator></Generator>
     </AndroidResource>
     <AndroidResource Include="Resources\xml\RemoteConfigDefaults.xml">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
+    <AndroidResource Include="Resources\mipmap-hdpi\ic_stat_logo.png">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
+    <AndroidResource Include="Resources\mipmap-mdpi\ic_stat_logo.png">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
+    <AndroidResource Include="Resources\mipmap-xhdpi\ic_stat_logo.png">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
+    <AndroidResource Include="Resources\mipmap-xxhdpi\ic_stat_logo.png">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
+    <AndroidResource Include="Resources\mipmap-xxxhdpi\ic_stat_logo.png">
       <SubType></SubType>
       <Generator></Generator>
     </AndroidResource>
