--- a/MobiHymn4/MobiHymn4.Android/Properties/AndroidManifest.xml
+++ b/MobiHymn4/MobiHymn4.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.tjapps.mobihymn">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="33" />
-	<application android:label="MobiHymn4.Android" android:theme="@style/MainTheme"></application>
+	<application android:name="MainApplication" android:label="MobiHymn Beta" android:theme="@style/MainTheme">
+		<meta-data android:name="com.google.firebase.messaging.default_notification_icon" android:resource="@mipmap/ic_stat_logo" />
+	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
