--- a/MobiHymn4/MobiHymn4/MobiHymn4.csproj
+++ b/MobiHymn4/MobiHymn4/MobiHymn4.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="Polly" Version="7.2.4" />
     <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
     <PackageReference Include="FirebaseDatabase.net" Version="4.2.0" />
+    <PackageReference Include="Plugin.FirebasePushNotification" Version="3.4.35" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Resources\Fonts\ChelseaMarket-Regular.ttf" />
