iniital midi, bookmark group
can group bookmarks, set up initial midi player

--- a/MobiHymn4/MobiHymn4.Android/MobiHymn4.Android.csproj
+++ b/MobiHymn4/MobiHymn4.Android/MobiHymn4.Android.csproj
@@ -113,6 +113,90 @@
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
     <None Include="google-services.json" />
+    <None Include="libs\armeabi-v7a\libsndfile.so" />
+    <None Include="libs\armeabi-v7a\libgio-2.0.so" />
+    <None Include="libs\armeabi-v7a\libffi.so" />
+    <None Include="libs\armeabi-v7a\preloadable_libiconv.so" />
+    <None Include="libs\armeabi-v7a\libglib-2.0.so" />
+    <None Include="libs\armeabi-v7a\libgobject-2.0.so" />
+    <None Include="libs\armeabi-v7a\libfluidsynth.so" />
+    <None Include="libs\armeabi-v7a\libvorbisfile.so" />
+    <None Include="libs\armeabi-v7a\libvorbisenc.so" />
+    <None Include="libs\armeabi-v7a\libiconv.so" />
+    <None Include="libs\armeabi-v7a\libgmodule-2.0.so" />
+    <None Include="libs\armeabi-v7a\libvorbis.so" />
+    <None Include="libs\armeabi-v7a\libcharset.so" />
+    <None Include="libs\armeabi-v7a\liboboe.so" />
+    <None Include="libs\armeabi-v7a\libc++_shared.so" />
+    <None Include="libs\armeabi-v7a\libfluidsynth-assetloader.so" />
+    <None Include="libs\armeabi-v7a\libintl.so" />
+    <None Include="libs\armeabi-v7a\libFLAC.so" />
+    <None Include="libs\armeabi-v7a\libz.so" />
+    <None Include="libs\armeabi-v7a\libgthread-2.0.so" />
+    <None Include="libs\armeabi-v7a\libogg.so" />
+    <None Include="libs\x86\libsndfile.so" />
+    <None Include="libs\x86\libgio-2.0.so" />
+    <None Include="libs\x86\libffi.so" />
+    <None Include="libs\x86\preloadable_libiconv.so" />
+    <None Include="libs\x86\libglib-2.0.so" />
+    <None Include="libs\x86\libgobject-2.0.so" />
+    <None Include="libs\x86\libfluidsynth.so" />
+    <None Include="libs\x86\libvorbisfile.so" />
+    <None Include="libs\x86\libvorbisenc.so" />
+    <None Include="libs\x86\libiconv.so" />
+    <None Include="libs\x86\libgmodule-2.0.so" />
+    <None Include="libs\x86\libvorbis.so" />
+    <None Include="libs\x86\libcharset.so" />
+    <None Include="libs\x86\liboboe.so" />
+    <None Include="libs\x86\libc++_shared.so" />
+    <None Include="libs\x86\libfluidsynth-assetloader.so" />
+    <None Include="libs\x86\libintl.so" />
+    <None Include="libs\x86\libFLAC.so" />
+    <None Include="libs\x86\libz.so" />
+    <None Include="libs\x86\libgthread-2.0.so" />
+    <None Include="libs\x86\libogg.so" />
+    <None Include="libs\arm64-v8a\libsndfile.so" />
+    <None Include="libs\arm64-v8a\libgio-2.0.so" />
+    <None Include="libs\arm64-v8a\libffi.so" />
+    <None Include="libs\arm64-v8a\preloadable_libiconv.so" />
+    <None Include="libs\arm64-v8a\libglib-2.0.so" />
+    <None Include="libs\arm64-v8a\libgobject-2.0.so" />
+    <None Include="libs\arm64-v8a\libfluidsynth.so" />
+    <None Include="libs\arm64-v8a\libvorbisfile.so" />
+    <None Include="libs\arm64-v8a\libvorbisenc.so" />
+    <None Include="libs\arm64-v8a\libiconv.so" />
+    <None Include="libs\arm64-v8a\libgmodule-2.0.so" />
+    <None Include="libs\arm64-v8a\libvorbis.so" />
+    <None Include="libs\arm64-v8a\libcharset.so" />
+    <None Include="libs\arm64-v8a\liboboe.so" />
+    <None Include="libs\arm64-v8a\libc++_shared.so" />
+    <None Include="libs\arm64-v8a\libfluidsynth-assetloader.so" />
+    <None Include="libs\arm64-v8a\libintl.so" />
+    <None Include="libs\arm64-v8a\libFLAC.so" />
+    <None Include="libs\arm64-v8a\libz.so" />
+    <None Include="libs\arm64-v8a\libgthread-2.0.so" />
+    <None Include="libs\arm64-v8a\libogg.so" />
+    <None Include="libs\x86_64\libsndfile.so" />
+    <None Include="libs\x86_64\libgio-2.0.so" />
+    <None Include="libs\x86_64\libffi.so" />
+    <None Include="libs\x86_64\preloadable_libiconv.so" />
+    <None Include="libs\x86_64\libglib-2.0.so" />
+    <None Include="libs\x86_64\libgobject-2.0.so" />
+    <None Include="libs\x86_64\libfluidsynth.so" />
+    <None Include="libs\x86_64\libvorbisfile.so" />
+    <None Include="libs\x86_64\libvorbisenc.so" />
+    <None Include="libs\x86_64\libiconv.so" />
+    <None Include="libs\x86_64\libgmodule-2.0.so" />
+    <None Include="libs\x86_64\libvorbis.so" />
+    <None Include="libs\x86_64\libcharset.so" />
+    <None Include="libs\x86_64\liboboe.so" />
+    <None Include="libs\x86_64\libc++_shared.so" />
+    <None Include="libs\x86_64\libfluidsynth-assetloader.so" />
+    <None Include="libs\x86_64\libintl.so" />
+    <None Include="libs\x86_64\libFLAC.so" />
+    <None Include="libs\x86_64\libz.so" />
+    <None Include="libs\x86_64\libgthread-2.0.so" />
+    <None Include="libs\x86_64\libogg.so" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\styles.xml" />
