--- a/MobiHymn4/MobiHymn4/MobiHymn4.csproj
+++ b/MobiHymn4/MobiHymn4/MobiHymn4.csproj
@@ -31,6 +31,7 @@
     <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
     <PackageReference Include="FirebaseDatabase.net" Version="4.2.0" />
     <PackageReference Include="Plugin.FirebasePushNotification" Version="3.4.35" />
+    <PackageReference Include="Xam.Plugin.SimpleBottomDrawer" Version="1.0.11" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Resources\Fonts\ChelseaMarket-Regular.ttf" />
